# Satellite-ADCS-KalmanFilter

./: CMakeLists.txt  DynamicLinalg.c  DynamicLinalg.h  Kalman.c  Kalman.h  README.md  Simulators.c  Simulators.h  StaticLinalg.c  StaticLinalg.h
